--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,7 +1,21 @@
 steps:
+  - label: ":test_tube: Run tests"
+    command: "test.sh"
+    key: "unit-tests"
+
+  - command: "deploy.sh"
+    label: ":rocket: Deploy to dev/qa"
+    key: "deploy-qa"
+    branches: "main"
+    concurrency: 1
+    concurrency_group: 'deploy/qa'
+    depends_on: "unit-tests"
+
   - block: "Release"
+    branches: "main"
     prompt: "Fill out the details for release"
-    fields: 
+    depends_on: "deploy-qa"
+    fields:
       - text: "Release Name"
         key: "release-name"
         hint: "Think of a cool name for this release"
@@ -17,5 +31,9 @@ steps:
           value: "beta"
         - label: "Stable"
           value: "stable"
-  - command: release.sh
-    label: ":rocket:"
+
+  - command: "release.sh"
+    label: ":rocket: Create release branch"
+    branches: "main"
+    concurrency: 1
+    concurrency_group: 'deploy/staging'
