--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -1,6 +1,6 @@
 steps:
   - label: ":test_tube: Run tests"
-    command: "echo 'Running tests....' 'Success!'"
+    command: "test.sh"
     key: "unit-tests"
 
   - command: "deploy.sh"
@@ -9,15 +9,13 @@ steps:
     branches: "main"
     concurrency: 1
     concurrency_group: 'deploy/qa'
-    depends_on:
-      - "unit-tests"
+    depends_on: "unit-tests"
 
   - block: "Release"
     branches: "main"
     prompt: "Fill out the details for release"
-    depends_on:
-      - "deploy-qa"
-    fields: 
+    depends_on: "deploy-qa"
+    fields:
       - text: "Release Name"
         key: "release-name"
         hint: "Think of a cool name for this release"
@@ -34,6 +32,8 @@ steps:
         - label: "Stable"
           value: "stable"
 
-  - command: release.sh
+  - command: "release.sh"
     label: ":rocket: Create release branch"
     branches: "main"
+    concurrency: 1
+    concurrency_group: 'deploy/staging'
